--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing="15">
         <tr>
             <Td>
-                <img src="картинка.jpeg"width="200"alt="тут моя фотка"/>
+                <img src="фото.jpeg"width="200"alt="тут моя фотка"/>
             </Td>
             <td>
                 <h1>Дмитрий Нестеров</h1>
